--- a/Movie Ranking Website/stl.css
+++ b/Movie Ranking Website/stl.css
@@ -16,7 +16,7 @@ h1 {
     text-transform: uppercase;
 }
 
-.movie-titles {
+.titles {
     font-weight: 550; 
     font-size: 18pt;
     font-family: Arial, Helvetica, sans-serif;
