--- a/Movie Ranking Website/stl.css
+++ b/Movie Ranking Website/stl.css
@@ -2,11 +2,21 @@ body {
     background-color: #f3f0ec;
 }
 
+#dwight{
+    height: 200px;
+    width: 200px;
+    position: relative;
+    left: 0px;
+    
+}
+
+
 img {
-    height: 300px;
-    width: 500px;
-    border: 3px soli black;
+    height: 400px;
+    width: 550px;
+    border: 2px solid gray;
     border-radius: 15px;
+    
 }
 
 h1 {
@@ -16,11 +26,27 @@ h1 {
     text-transform: uppercase;
 }
 
-.titles {
+.titles{
     font-weight: 550; 
-    font-size: 18pt;
+    font-size: 23pt;
     font-family: Arial, Helvetica, sans-serif;
-    border: 5px solid white;
+    border: 5px solid whit;
+}
+
+.semovdivs{
+    display: block;
+    width: 100%;
+    height: 500px;
+}
+
+.left{
+    float: left;
+    margin-right: 10px;
+}
+
+.right{
+    float: right;
+    margin-left: 10px;
 }
 
 footer {
@@ -28,11 +54,12 @@ footer {
     font-weight: normal;
     font-family: Arial, Helvetica, sans-serif;
     border: none;
+    clear: both;
 }
 
 p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
+    font-family: 'Amatic SC', sans-serif;
+    font-size: 25pt;
     padding: 5px;
     
 }
@@ -41,26 +68,25 @@ main {
     background-color: #ffffff;
 }
 
-.footer {
-    border: none;
-}
 
-.about-page{
-    border: none;
-    
-}
-
-.description{
+.description {
     font-family: 'Amatic SC', sans-serif;
     font-size: 36px;
     margin-top: 2px;
+   
 }
 
+.list-in-description{
+    font-family: 'Amatic SC', sans-serif;
+    font-size: 26px;
+}
+ 
 .home-image-links{
     height: 250px;
     width: 330px;
     border: 3px solid black;
     margin: 0;
+    float: none;
 }
 
 #hil1{
@@ -99,4 +125,113 @@ main {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20pt;
     margin-top: 3px;
+}
+
+a.hilt{
+    color: black;
+    text-decoration: none;
+}
+
+@media(min-width:319px) and (max-width:480px){
+     
+    
+    #dwight{
+        height: 40px;
+        width: 40px;
+    }
+
+
+    img {
+        height: 80px;
+        width: 95px;
+        border-radius: 10px;
+        border: 1px solid gray; 
+    }
+
+    h1 {
+        font-size: 25pt;
+       
+    }
+
+    .titles{
+        font-weight: 550; 
+        font-size: 13pt;
+        font-family: Arial, Helvetica, sans-serif;
+        border: 5px solid white;
+    }
+
+    .semovdivs{
+        display: block;
+        width: 100%;
+        height: 220px;
+    }
+
+    p {
+        font-family: 'Amatic SC', sans-serif;
+        font-size: 15pt;
+        padding: 5px;
+        
+    }
+
+    main {
+        background-color: #ffffff;
+    }
+
+
+    .description {
+        font-family: 'Amatic SC', sans-serif;
+        font-size: 15px;
+        margin-top: 2px;
+    
+    }
+
+
+    .home-image-links{
+        height: 220px;
+        width: 300px;
+        border: 3px solid black;  
+    }
+
+    #hil1{
+        width: 360px;
+        height: 300px;
+        text-align: center;
+        margin-bottom: 0px;
+    }
+
+    #hil2{
+        width: 360px;
+        height: 300px;
+        text-align: center;
+        margin-left: 0%;
+        margin-top:0px;
+        
+    }
+
+    #hil3{
+        width: 360px;
+        height: 300px;
+        text-align: center;
+        margin-left: 0%;
+        margin-top:0px;
+        margin-bottom: 0px;
+    }
+
+    #hil4{
+        width: 360px;
+        height: 3000px;
+        text-align: center;
+        margin-left: 0%;
+        margin-top:0px;
+    }
+
+    .hilt{
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 15pt;
+        margin-top: 3px;
+    }
+
+    
+   
 }
