--- a/Movie Ranking Website/stl.css
+++ b/Movie Ranking Website/stl.css
@@ -166,6 +166,10 @@ a.hilt{
         height: 220px;
     }
 
+    .sedivs{
+        height: 320px;
+    }
+
     p {
         font-family: 'Amatic SC', sans-serif;
         font-size: 15pt;
